fix: remove extra margin on button

--- a/apps/theme/pageBuilder/styles/elements/button.scss
+++ b/apps/theme/pageBuilder/styles/elements/button.scss
@@ -145,5 +145,5 @@
 .webiny-pb-page-document-mode--mobile-landscape .webiny-pb-page-element-button,
 .webiny-pb-page-document-mode--mobile-portrait .webiny-pb-page-element-button {
   // force center align on mobile
-  margin: 20px auto !important;
+  margin: 0 auto !important;
 }
